--- a/TempleProject/TempleProject/Web.config
+++ b/TempleProject/TempleProject/Web.config
@@ -9,9 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ORCL" connectionString="host=localhost;user=test;password=1234;database=test;" providerName="MySql.Data.MySqlClient"/>
+    <add name="ORCL" connectionString="host=localhost;user=test;password=1234;database=test;CharSet=utf8;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.web>
+    <globalization culture="th-TH" uiCulture="th-TH"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
